CNSDEVCOLECT/force-app/main/default/objects/FormField__mdt/FormField__mdt.object-meta.xml
<CustomObject>
    <label>FormField</label>
    <pluralLabel>FormFields</pluralLabel>
</CustomObject>