CNSDEVCOLECT/force-app/main/default/objects/FormField__mdt/fields/nro_orden__c.field-meta.xml
<CustomField>
    <fullName>nro_orden__c</fullName>
    <label>nro Orden</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>