CNSDEVCOLECT/force-app/main/default/objects/FormField__mdt/fields/pageLayout__c.field-meta.xml
<CustomField>
    <fullName>pageLayout__c</fullName>
    <label>pageLayout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>