CNSDEVCOLECT/force-app/main/default/objects/FormField__mdt/fields/seccion_nro__c.field-meta.xml
<CustomField>
    <fullName>seccion_nro__c</fullName>
    <label>nro Seccion</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>