CNSDEVCOLECT/force-app/main/default/objects/FormField__mdt/fields/valor__c.field-meta.xml
<CustomField>
    <fullName>valor__c</fullName>
    <label>valor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>