CNSDEVCOLECT/force-app/main/default/objects/FormField__mdt/listViews/listaOppProd.listView-meta.xml
<ListView>
    <fullName>listaOppProd</fullName>
    <columns>MasterLabel</columns>
    <columns>API_Name_Field__c</columns>
    <columns>Related_Object__c</columns>
    <columns>pageLayout__c</columns>
    <columns>Section__c</columns>
    <columns>DeveloperName</columns>
    <columns>nro_orden__c</columns>
    <columns>seccion_nro__c</columns>
    <columns>Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>listaOppProd</label>
</ListView>